	Thomas Kurpick
	Tat Leung
	Costin Leau
	Antoine Levy-Lambert
	Andrey Lomakin
	William Lyvers
	Sakari Maaranen
	Jan Materne
	Markus M. May
	Abel Muino
	J. Lewis Muir
	Stephen Nesbitt
	Joshua Nichols
	Bernard Niset
	Ales Nosek
	David Maplesden
	Glen Marchesani
	Phil Messenger
	Steve Miller
	Mathias Muller
	Randy Nott
	Peter Oxenham
	Douglas Palmer
	Jesper Pedersen
	Emmanuel Pellereau
	Roshan Punnoose
	Jean-Baptiste Quenot
	Carl Quinn
	Damon Rand
	Geoff Reedy
	Torkild U. Resheim
	Christian Riege
	Jens Rohloff
	Andreas Sahlbach
	Brian Sanders
	Adrian Sandor
	Michael Scheetz
	Ben Schmidt
	Ruslan Shevchenko
	John Shields
	Nihal Sinha
	Gene Smith
	Simon Steiner
	Johan Stuyts
	John Tinetti
	Jason Trump
	Tjeerd Verhagen
	Richard Vowles
	Sven Walter
	James P. White
	Tom Widmer
	John Williams
	Chris Wood
	Patrick Woodworth
	Jaroslaw Wypychowski
	Sven Zethelius
	Aleksey Zhukov
	
   trunk
=====================================
- NEW: IvyDependencyTree task : display a dependency tree on the console
- NEW: Support Conditional Setting of a Property (IVY-1367)
- NEW: Exposing some parent metadata (organisation, module, revision, branch) as properties (IVY-1288)
- NEW: symlinkmass feature based on symlink feature of ivy:retrieve (IVY-1252) (Thanks to Gene Smith)

- IMPROVEMENT: add support for source bundles from p2 repositories
- IMPROVEMENT: add support for source URI from OBR repositories

- FIX: Maven2: resolve failure when parent has <dependencyManagement> with dependency in 'import' scope (IVY-1376)
- FIX: IvyPublish fails when using extend tags with no explicit location attribute (IVY-1391)
- FIX: Properly handle evicted nodes in ResolveReport

   2.3.0-rc2
=====================================
- DOCUMENTATION: Documentation and Implementation mismatch of makepom (IVY-1383) (thanks to Thomas Kurpick)
- DOCUMENTATION: added link to extra beginners guide (IVY-1381)

- FIX: Ivy default cache path with non-ASCII character lets it crash (IVY-1378)