@@ -40,6 +40,8 @@ The included ivysettings file has to be a complete well formed ivysettings file,
         <td>Yes, unless file is specified</td></tr>
     <tr><td>file</td><td>a path to the ivysettings file to include</td>
         <td>Yes, unless url is specified</td></tr>
+    <tr><td>optional</td><td>indicates whether Ivy should throw an error if the specified file doesn't exist. <span class="since">(Since 2.4)</span>.</td>
+        <td>No, default to false</td></tr>
 </tbody>
 </table>
 <h1>Examples</h1>
