@@ -2792,6 +2792,37 @@ argument_list|()
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|String
+name|optional
+init|=
+operator|(
+name|String
+operator|)
+name|attributes
+operator|.
+name|get
+argument_list|(
+literal|"optional"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+literal|"true"
+operator|.
+name|equals
+argument_list|(
+name|optional
+argument_list|)
+operator|&&
+operator|!
+name|settingsFile
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
 name|ivy
 operator|.
 name|setSettingsVariables
