@@ -96,6 +96,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 	Douglas Palmer
 	Jesper Pedersen
 	Emmanuel Pellereau
+	Yanus Poluektovich
 	Roshan Punnoose
 	Jean-Baptiste Quenot
 	Carl Quinn
@@ -136,6 +137,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - NEW: Exposing some parent metadata (organisation, module, revision, branch) as properties (IVY-1288)
 - NEW: symlinkmass feature based on symlink feature of ivy:retrieve (IVY-1252) (Thanks to Gene Smith)
 
+- IMPROVEMENT: Optional <include> ivysettings directives (IVY-1392) (thanks to Yanus Poluektovich)
 - IMPROVEMENT: add support for source bundles from p2 repositories
 - IMPROVEMENT: add support for source URI from OBR repositories
 
